# clawbuddy

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: windows-build.yml
docs/: debug-checklist.md  feishu-bot-integration.md  issues.md  release-notes-v0.1.0.md  wechatferry-integration.md
docs/reports/: fix-summary-2026-06-16.md
scripts/: bundle-gateway.sh  ci-smoke.mjs  fix-stepfun-key.sh  publish-release.sh
src/: App.css  App.tsx  Composer.tsx  KeyConfigCard.tsx  Markdown.tsx  ModelSwitcher.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/runtime/: feishu-login.mjs  openclaw-gateway
src-tauri/src/: lib.rs
src-tauri/src/feishu/: http_server.rs  mod.rs
src-tauri/src/wechatferry/: mod.rs
src/hooks/: useChat.ts
src/pages/: ChannelPairingPanel.tsx  FeishuBridge.tsx  SettingsPage.tsx  WeChatBridge.tsx
