[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
tray-icon = "0.11"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.dirs]
version = "5"
